doc(BMDEV-2799): add-opens list, scaling issues fix
BMDEV-2799 Update api documentation in repository L0