@@ -249,6 +249,29 @@ You should be able to use any IDE you like as long as it supports Gradle. You mi
 - Sometimes your IDE may handle your gradle compileOnly dependencies incorrectly and still add those to classpath. **This will usually result in NoSuchMethodError or NoClassDefFoundError**. You can verify that this is the case by checking `java.class.path` system properly of the process that you started via Java VisualVM on in any other way - it shouldn't contain any of compileOnly dependencies, so if it does - this is a problem. To solve it you can either (hackish simple way) edit build.gradle to point to the libraries from `C:\Program Files\Bookmap\lib` directory (which will ensure that those are the same exact libraries that bookmap expects, preventing the crash) or (more correct way, but exact way to achieve it differs from one IDE to another) remove the project and project dependencies from run configuration.
 - Working directory will determine where your config folder will be. On Windows you can set `C:\Bookmap`, which is the default during installation, but you can also maintain multiple separate Bookmap configs, if you want.
 - Add `C:\Program Files\Bookmap\Bookmap.jar` to the classpath. It should list the dependencies in manifest, so that will often be enough, but you can include libraries from `C:\Program Files\Bookmap\lib` if Bookmap complains about missing classes.
+- If you are using Java 16 or newer, add the list of `--add-opens` JVM args to your run configuration:
+```
+--add-opens=java.base/java.lang=ALL-UNNAMED
+--add-opens=java.base/java.io=ALL-UNNAMED
+--add-opens=java.base/java.math=ALL-UNNAMED
+--add-opens=java.base/java.util=ALL-UNNAMED
+--add-opens=java.base/java.util.concurrent=ALL-UNNAMED
+--add-opens=java.base/java.net=ALL-UNNAMED
+--add-opens=java.base/java.text=ALL-UNNAMED
+--add-opens=java.desktop/java.awt=ALL-UNNAMED
+--add-opens=java.desktop/java.awt.color=ALL-UNNAMED
+--add-opens=java.desktop/java.awt.peer=ALL-UNNAMED
+--add-opens=java.desktop/com.sun.java.swing=ALL-UNNAMED
+--add-opens=java.prefs/java.util.prefs=ALL-UNNAM
+--add-opens=java.desktop/sun.awt.windows=ALL-UNNAMED // this one is needed only for Windows
+```
+- When started from an IDE on a Windows machine, your Bookmap might look different from what you see when you 
+start it from the desktop shortcut. If you see black areas on a heatmap, this is caused by Java scaling issues.
+To fix this:
+  - Find the `java.exe` file of the JDK that you use to start Bookmap from an IDE
+  - Right-click on it, go to `Properties -> Compatibility`.
+  - Press the `Change high DPI settings` button. In the opened window, check the `Override high DPI scaling behavior. Scaling performed by:` checkbox.
+  - In the dropdown below select `System` or `System (Enhanced)`
 - Start `velox.ib.Main`
 
 #### Running Bookmap with IntelliJ IDEA
@@ -266,7 +289,7 @@ the default installation paths.
 4. You might need to change the project JDK version (in `File -> Project Structure -> SDK`),
 for details on Java version, check out [General tips on running Bookmap with any IDE](#General tips on running Bookmap with any IDE).
 
-Note that if you make any changes to this run configuration in your IDE, they will be overwritten on project import refresh.
+Note that if you make any changes to this run configuration in your IDE, they will be overwritten on gradle project sync.
 You need to either only modify the config in `build.gradle`, or, after successful import of the config,
 remove it from `build.gradle`.
 
@@ -277,7 +300,8 @@ remove it from `build.gradle`.
 if you changed the installation directory)
 3. Set 'Working directory': `C:\Bookmap\Config`
 4. Set the JDK. Check which JDK version to use in [General tips on running Bookmap with any IDE](#General tips on running Bookmap with any IDE).
-5. Save the config, and try to run it. If everything worked right, Bookmap will start.
+5. For Java ver. 16 or newer - add `--add-opens` JVM args - check out [General tips on running Bookmap with any IDE](#General tips on running Bookmap with any IDE).
+6. Save the config, and try to run it. If everything worked right, Bookmap will start.
 
 If you want to **attach a debugger**, run the configuration in `Debug` mode (a button next to `Run`).
 You should see a record in the process logs like: `Connected to the target VM, address: '127.0.0.1:63518', transport: 'socket'`
